--- a/templates/appointment/payment_failed.html
+++ b/templates/appointment/payment_failed.html
@@ -12,7 +12,7 @@
         <div class="section-header">
             <div class="header-content">
                 <h1><i class="fas fa-exclamation-triangle"></i> Payment Failed</h1>
-                <p>We couldn't process your payment</p>
+                <p>We could not process your payment</p>
             </div>
         </div>
 
