--- a/templates/authUser/profile.html
+++ b/templates/authUser/profile.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="{% static 'assets/images/paw.png' %}?v=2" type="image/png">
