--- a/templates/authUser/user_info.html
+++ b/templates/authUser/user_info.html
@@ -10,6 +10,16 @@
 <div class="pet-feed-content">
     <div class="user-profile-container">
         <!-- User Profile Header -->
+        <div class="message-container">
+            {% for message in messages %}
+            <div class="message {% if message.tags %}{{ message.tags }}{% endif %}">
+                <span class="message-text">{{ message }}</span>
+                <button class="message-close" aria-label="Close message">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+            {% endfor %}
+        </div>
         <div class="user-profile-header">
             <div class="user-avatar">
                 {% if user.petownerprofile %}
@@ -258,7 +268,7 @@
                         
                         <div class="form-group">
                             <label for="pets_owned"><i class="fas fa-paw"></i> Pets Owned</label>
-                            <input type="number" id="pets_owned" name="pets_owned" value="{{ profile.pets_owned }}">
+                            <input type="number" id="pets_owned" name="pets_owned" value="{{ profile.pets_owned }}" required>
                         </div>
                     {% endif %}
                 </div>
