--- a/templates/main/footer.html
+++ b/templates/main/footer.html
@@ -5,37 +5,27 @@
             <h3>PetVet</h3>
             <ul>
                 <li><a href="{% url 'coreFunctions:about' %}">About Us</a></li>
-                <li><a href="#">Our Team</a></li>
-                <li><a href="#">Careers</a></li>
-                <li><a href="#">Press</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="#">Directly Mail us</a></li>
             </ul>
         </div>
         <div class="footer-column">
             <h3>Services</h3>
             <ul>
                 <li><a href="#">Vet Appointments</a></li>
-                <li><a href="#">Emergency Care</a></li>
-                <li><a href="#">Pet Health Tracking</a></li>
                 <li><a href="#">Community Forums</a></li>
-                <li><a href="#">Expert Chats</a></li>
             </ul>
         </div>
         <div class="footer-column">
             <h3>Resources</h3>
             <ul>
-                <li><a href="#">Help Center</a></li>
-                <li><a href="#">Pet Care Guides</a></li>
-                <li><a href="#">Vet Q&A</a></li>
                 <li><a href="#">Community Guidelines</a></li>
-                <li><a href="#">FAQs</a></li>
+                <li><a href="#">Terms & Conditions</a></li>
             </ul>
         </div>
         <div class="footer-column">
             <h3>Contact Us</h3>
             <ul>
                 <li><a href="#"><i class="fas fa-envelope"></i> hello@petcareconnect.com</a></li>
-                <li><a href="#"><i class="fas fa-phone"></i> 98036393999</a></li>
                 <li><a href="#"><i class="fas fa-map-marker-alt"></i> Pet Street, Lalitpur</a></li>
             </ul>
             <div class="social-links">
